--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,4 @@
 
-a:hover {
-  text-decoration: none;
-}
-
 .navbar {
   position: fixed;
   background: transparent;
@@ -87,9 +83,10 @@ section {
 .home-text-name{
   font-size: 60px;
   text-shadow: 1px 1px black;
-  color: var(--blue);
+  color: blue;
 }
 
+/* ABOUT */
 .about-row {
   display: flex;
   flex-direction: row;
@@ -107,8 +104,6 @@ section {
   grid-template-columns: 1fr 1fr 1fr;
   gap: 10px;
 }
-
-
 
 .skill-container {
   font-size: 65px;
@@ -148,6 +143,125 @@ section {
   color:#f44d27
 }
 
+/* PORTFOLIO */
+.portfolio-column {
+  flex: 50%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+}
+
+.portfolio-container {
+  min-width: 130px;
+  position:relative;
+  display:inline-block;
+  overflow: hidden;
+  border-radius: 10px;
+}
+
+.porfolio-image{
+  width: 100%;
+  transition: all 0.5s;
+  border: 2px solid;
+  border-radius: 10px;
+}
+
+.portfolio-description{
+  width:100%;
+  height:100%;
+  background:rgba(0,0,0,.75);
+  position:absolute;
+  left: 0;
+  opacity: 0;
+  color: white;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  transition: all 0.5s;
+}
+
+.portfolio-container:hover .portfolio-description {
+  opacity: 1;
+  border-radius: 10px;
+  transform: translateY(-100%);
+  transition: all 0.5s;
+}
+
+.portfolio-container:hover .porfolio-image {
+  transition: all 0.5s;
+  transform: scale(1.2);
+  border-radius: 10px;
+}
+
+.portfolio-description-content{
+  flex: 33%;
+  display: table;
+  padding: 0 5px;
+}
+
+.portfolio-description-links{
+  flex: 33%;
+  display: flex;
+  flex-direction: row;
+}
+
+.portfolio-description-button-container{
+  background: #191919;
+  border-radius: 10px;
+  border: 0;
+  width: 75%;  
+  height: 50%;
+  display: table;
+  margin: 0 auto;
+}
+.portfolio-description-buttons{
+  text-decoration: none !important;
+  color: #f5f5f5;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.portfolio-description-buttons {
+  color: var(--blue);
+}
+
+.portfolio-text{
+  text-align: left;
+  margin-top: 25px;
+}
+
+/* HOBBIES */
+.hobbies-column {
+  flex: 50%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+}
+
+.hobbies-container {
+  font-size: 65px;
+  color: var(--grey);
+  padding: 35px 5px;
+  transition: all 0.3s;
+  min-width: 130px;
+}
+
+.hobbies-container:hover{
+  padding: 30px 0;
+  gap: 10px;
+  width: 100%;
+  transform: scale(1.1);
+}
+
+.hobbies-name {
+  font-size: 16px;
+  text-align: center;
+  font-weight: bolder;
+}
+
+
+
+/* CONTACT */
 .contact-row {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -161,13 +275,20 @@ section {
   color: black;
 }
  
+.contact-column:hover {
+  transform: scale(1.2);
+}
+
 .contact-link {
   color: black;
-  text-decoration: none;
 }
 
 .contact-item {
   flex: 50%;
+}
+
+.contact-item:hover{
+  opacity: 0.5;
 }
 
 .fa-envelope{
@@ -186,7 +307,6 @@ section {
 @media (max-width: 991px) {
   
   .nav-header{
-
     position: absolute;
     width: 100vw;
     height: 100vh;
@@ -197,8 +317,18 @@ section {
     left: 0;
     padding-top: 25px;
     font-size: 20px;
+    transform: translateX(100%);
+    opacity: 0;
+    transition: all 0.5s;
   }
   
+  .visible {
+    display: flex;
+    transform: translateX(0);
+    opacity: 1;
+    transition: all 0.5s;
+  }
+
   .about-row {
     flex-direction: column;
   }
@@ -206,6 +336,14 @@ section {
   .about-column-skills{
     grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));;}
   
+  .portfolio-column {
+    grid-template-columns: 1fr;
+  }
+
+  .hobbies-column {
+    grid-template-columns: 1fr;
+  }
+
   .contact-row {
     grid-template-columns: 1fr 1fr;
   }
